--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-markdown: redcarpet
+#markdown: redcarpet
 pygments: true
 css-url: /css
 permalink: /:year-:month-:day-:title.html
-redcarpet:
-    extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
+#redcarpet:
+#    extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
