--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 pygments: true
 css-url: /css
 permalink: /:year-:month-:day-:title.html
-#redcarpet:
-#    extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
+kramdown:
+    extensions: ["fenced_code_blocks"]
