--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,10 @@ css-url: /css
 permalink: /:year-:month-:day-:title.html
 # kramdown:
 #     extensions: ["fenced_code_blocks"]
+
+highlighter: pygments
+gems:
+  - jekyll-mentions
+  - jemoji
+  - jekyll-redirect-from
+  - jekyll-sitemap
