change to pixyll-zh-cn

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,38 @@
-# 设置 Markdown 的渲染引擎，还可以是 rdiscount
-markdown: redcarpet
+# Site settings
+title:       pixell中文版 
+email:       youremail@example.com 
+author:      John Otander
+description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+baseurl:     ""
+url:         "http://pixyll.maxee.info"
 
-pygments: true
-highlighter: pygments
-kramdown:
-    extensions: ["fenced_code_blocks"]
-    input: GFM
-gems:
-  - jekyll-mentions
-  - jemoji
-  - jekyll-redirect-from
-  - jekyll-sitemap
-css-url: /css
-permalink: /:year/:month/:day/:title.html
+#Duoshuo short Name / 多说的shortname
+duoshuo: 
 
+#Baidu analytics / 百度统计(异步的js码，注意使用异步版本的)
+baidu_analyze: 3908cbb144cf558ba6a823230d653fc22 
 
+# Google analytics
+google_analytics:
 
+# Optional features
+animated:           false
+show_related_posts: false
+show_post_footers:  false
+
+# Social icons
+show_social_icons: false
+github_username:
+twitter_username:
+google_plus_id:
+linkedin_username:
+bitcoin_url:
+paypal_url:
+flattr_button:
+
+# Build settings
+markdown:     kramdown
+permalink:    pretty
+paginate:     3
+sass:
+  compressed: true
