--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       ggiiss@qq.com
 author:      杨军军
 description: "专注于前端"
 baseurl:     ""
-url:         ""
+url:         
 
 #Duoshuo short Name / 多说的shortname
 duoshuo: xngiser
