--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title:       杨军军的博客
 email:       ggiiss@qq.com 
 author:      杨军军
-description: "专注于前端"
+description: 专注于前端
 baseurl:     ""
-url:         yangjunjun.github.io
+url:         ""
 
 #Duoshuo short Name / 多说的shortname
 duoshuo: xngiser
